# desk-beam

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/bsp/: CMakeLists.txt  bsp.c  idf_component.yml
components/bsp/include/bsp/: bsp_board.h
components/hal_display/: CMakeLists.txt  hal_display.c  idf_component.yml
components/hal_display/include/hal_display/: hal_display.h
components/hal_key/: CMakeLists.txt  hal_key.c  idf_component.yml
components/hal_key/include/hal_key/: hal_key.h
components/hal_led/: CMakeLists.txt  hal_led.c  idf_component.yml  led_strip_encoder.c  led_strip_encoder.h
components/hal_led/include/hal_led/: hal_led.h
components/hal_sdcard/: CMakeLists.txt  hal_sdcard.c  idf_component.yml
components/hal_sdcard/include/hal_sdcard/: hal_sdcard.h
docs/: deepseek_data_pipeline.md  desktop_music_companion.md  handover_phase2.md
main/: CMakeLists.txt  app_deepseek_screen.c  app_deepseek_screen.h  app_led_effects.c  app_led_effects.h  app_logic.c  app_logic.h  app_music_screen.c  app_music_screen.h  app_network.c  app_network.h  app_ui.c  app_ui.h  app_ws_client.c  app_ws_client.h  idf_component.yml  main.c
pc_tools/: requirements.txt  windows_media_server.py
pc_tools/deepseek_skill/: SKILL.md
pc_tools/deepseek_skill/scripts/: generate_report.py  parse_usage.py
