# ============================================================================
# @file CMakeLists.txt
# @brief BSP 板级支持包组件 — 纯头文件，无源文件
#
# 本组件仅提供硬件描述宏定义（引脚、分辨率、布局参数），
# 不包含任何 .c 源文件。其他组件通过 REQUIRES bsp 引入。
# ============================================================================
idf_component_register(
    SRCS "bsp.c"
    INCLUDE_DIRS "include"
)
